--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,39 +1,52 @@
-trigger:
-  branches:
-    include:
-    - main
+name: Publish Docker images (GHCR)
 
-pool:
-  vmImage: 'ubuntu-latest'
+on:
+  push:
+    branches: [ main ]
+  workflow_dispatch:
 
-variables:
-  pythonVersion: '3.11'
-  nodeVersion: '20'
+permissions:
+  contents: read
+  packages: write
 
-stages:
-- stage: BuildAndTest
-  jobs:
-  - job: Backend
+# Prevent cancel on rapid pushes for this workflow
+concurrency:
+  group: docker-publish-${{ github.ref }}
+  cancel-in-progress: false
+
+jobs:
+  build-and-push:
+    timeout-minutes: 45
+    runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        service: [ backend, frontend ]
+
     steps:
-    - checkout: self
-    - task: UsePythonVersion@0
-      inputs:
-        versionSpec: '$(pythonVersion)'
-    - script: |
-        python -m pip install --upgrade pip
-        pip install -r backend/requirements.txt
-        pytest -q
-      displayName: 'Install & test backend'
-  - job: Frontend
-    steps:
-    - checkout: self
-    - task: NodeTool@0
-      inputs:
-        versionSpec: '$(nodeVersion)'
-    - script: |
-        cd frontend
-        npm ci || npm i
-        npm run build
-      displayName: 'Install & build frontend'
+      - uses: actions/checkout@v4
 
-# Optional: add a Deploy stage to Azure Web App / Container Registry once service connection is ready.
+      - name: Set up QEMU (multi-arch builds optional)
+        uses: docker/setup-qemu-action@v3
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Log in to GHCR
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      # Optional: restore GitHub Actions cache for Docker layers
+      - name: Build and push ${{ matrix.service }}
+        uses: docker/build-push-action@v6
+        with:
+          context: .
+          file: ${{ matrix.service }}/Dockerfile
+          push: true
+          tags: ghcr.io/${{ github.repository_owner }}/devops-demo-${{ matrix.service }}:latest
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+          provenance: false
